force-app/main/default/objects/Opportunity/fields/Project_Location_County__c.field-meta.xml
<CustomField>
    <fullName>Project_Location_County__c</fullName>
    <label>Project Location County</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Location_State__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Adair</fullName>
            </value>
            <value>
                <fullName>Adams</fullName>
            </value>
            <value>
                <fullName>Allen</fullName>
            </value>
            <value>
                <fullName>Anderson</fullName>
            </value>
            <value>
                <fullName>Ballard</fullName>
            </value>
            <value>
                <fullName>Barren</fullName>
            </value>
            <value>
                <fullName>Bath</fullName>
            </value>
            <value>
                <fullName>Bedford</fullName>
            </value>
            <value>
                <fullName>Bell</fullName>
            </value>
            <value>
                <fullName>Benton</fullName>
            </value>
            <value>
                <fullName>Blackford</fullName>
            </value>
            <value>
                <fullName>Bledsoe</fullName>
            </value>
            <value>
                <fullName>Blount</fullName>
            </value>
            <value>
                <fullName>Boone</fullName>
            </value>
            <value>
                <fullName>Bourbon</fullName>
            </value>
            <value>
                <fullName>Boyd</fullName>
            </value>
            <value>
                <fullName>Boyle</fullName>
            </value>
            <value>
                <fullName>Bracken</fullName>
            </value>
            <value>
                <fullName>Bradley</fullName>
            </value>
            <value>
                <fullName>Breathitt</fullName>
            </value>
            <value>
                <fullName>Breckinridge</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>Bullitt</fullName>
            </value>
            <value>
                <fullName>Butler</fullName>
            </value>
            <value>
                <fullName>Caldwell</fullName>
            </value>
            <value>
                <fullName>Calloway</fullName>
            </value>
            <value>
                <fullName>Campbell</fullName>
            </value>
            <value>
                <fullName>Cannon</fullName>
            </value>
            <value>
                <fullName>Carlisle</fullName>
            </value>
            <value>
                <fullName>Carroll</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>