force-app/main/default/objects/Opportunity/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <label>Alternate Project Name(s)</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>