force-app/main/default/objects/Opportunity/fields/Project_Out_of_Territory_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Project_Out_of_Territory_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used with &quot;Opportunity - Project Out of Territory&quot; workflow</description>
    <label>Project Out of Territory Email Sent</label>
    <type>Checkbox</type>
</CustomField>