force-app/main/default/objects/Opportunity/fields/Project_Registration__c.field-meta.xml
<CustomField>
    <fullName>Project_Registration__c</fullName>
    <label>Project Registration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Submitted to Vendor</fullName>
            </value>
            <value>
                <fullName>Reviewed/Finalized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>