force-app/main/default/objects/Opportunity/fields/Project_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Sub_Type__c</fullName>
    <label>Project Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
                <color>#0B6FCE</color>
                <label>Automotive</label>
            </value>
            <value>
                <fullName>Corporate</fullName>
                <color>#78C953</color>
                <label>Corporate</label>
            </value>
            <value>
                <fullName>Education</fullName>
                <color>#E27001</color>
                <label>Education</label>
            </value>
            <value>
                <fullName>Financial</fullName>
                <color>#A845DC</color>
                <label>Financial</label>
            </value>
            <value>
                <fullName>Government</fullName>
                <color>#F3D904</color>
                <label>Government</label>
            </value>
            <value>
                <fullName>Hospitality</fullName>
                <color>#A53711</color>
                <label>Hospitality</label>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
                <color>#66E9BD</color>
                <label>Manufacturing</label>
            </value>
            <value>
                <fullName>Medical</fullName>
                <color>#0B24BE</color>
                <label>Medical</label>
            </value>
            <value>
                <fullName>Mixed Use</fullName>
            </value>
            <value>
                <fullName>Recreational</fullName>
                <color>#419249</color>
                <label>Recreational</label>
            </value>
            <value>
                <fullName>Religious</fullName>
                <color>#B6E32E</color>
                <label>Religious</label>
            </value>
            <value>
                <fullName>Residential Multi-Family</fullName>
                <color>#641CCF</color>
                <label>Residential Multi-Family</label>
            </value>
            <value>
                <fullName>Residential Single-Family</fullName>
                <color>#F96FB7</color>
                <label>Residential Single-Family</label>
            </value>
            <value>
                <fullName>Restaurants</fullName>
                <color>#2F5D85</color>
                <label>Restaurants</label>
            </value>
            <value>
                <fullName>Retail</fullName>
                <color>#AFCADF</color>
                <label>Retail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>