force-app/main/default/objects/Opportunity/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>LTD Cross Territory</fullName>
            </value>
            <value>
                <fullName>Mixed Use</fullName>
            </value>
            <value>
                <fullName>National Account</fullName>
            </value>
            <value>
                <fullName>Opportunity Buy</fullName>
            </value>
            <value>
                <fullName>Out of Territory</fullName>
            </value>
            <value>
                <fullName>Residential - New Construction</fullName>
            </value>
            <value>
                <fullName>Residential - Remodel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>