force-app/main/default/objects/Opportunity/fields/Project_Valuation_Range__c.field-meta.xml
<CustomField>
    <fullName>Project_Valuation_Range__c</fullName>
    <inlineHelpText>Please select the valuation range for the project.  You should also estimate an amount and enter it in the Amount field on the Opportunity.</inlineHelpText>
    <label>Project Valuation Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under $1000</fullName>
            </value>
            <value>
                <fullName>$1000 - $4999</fullName>
            </value>
            <value>
                <fullName>$5000 - $9999</fullName>
            </value>
            <value>
                <fullName>$10,000 - $20,000</fullName>
            </value>
            <value>
                <fullName>$20,000 - $34,999</fullName>
            </value>
            <value>
                <fullName>$35,000 - $49,999</fullName>
            </value>
            <value>
                <fullName>$50,000 - $74,999</fullName>
            </value>
            <value>
                <fullName>$75,000 - $99,999</fullName>
            </value>
            <value>
                <fullName>$100,000 - $149,999</fullName>
            </value>
            <value>
                <fullName>$150,000 - $200,000</fullName>
            </value>
            <value>
                <fullName>Over $200,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>