force-app/main/default/objects/Opportunity/fields/Property_Owner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Owner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Property Owner Contact)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>