force-app/main/default/objects/Opportunity/fields/Property_Owner_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner_Contact_Id__c</fullName>
    <formula>Property_Owner_Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Owner Contact Id</label>
    <type>Text</type>
</CustomField>