force-app/main/default/objects/Opportunity/fields/Property_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner_Id__c</fullName>
    <formula>Property_Owner__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Owner Id</label>
    <type>Text</type>
</CustomField>