force-app/main/default/objects/Opportunity/fields/Prototype__c.field-meta.xml
<CustomField>
    <fullName>Prototype__c</fullName>
    <inlineHelpText>For National Account Projects, please list the prototype number of the building.</inlineHelpText>
    <label>Prototype</label>
    <length>80</length>
    <type>Text</type>
</CustomField>