force-app/main/default/objects/Opportunity/fields/Purchasing_Account_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Account_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The primary contact for the Purchasing Customer Account - e.g. the account that buys the tile.</inlineHelpText>
    <label>Customer Account - Primary Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities - Customer Account Primary Contact</relationshipLabel>
    <relationshipName>OpportunitiesPurchasingAccount</relationshipName>
    <type>Lookup</type>
</CustomField>