force-app/main/default/objects/Opportunity/fields/Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Status__c</fullName>
    <label>Quote Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>