force-app/main/default/objects/Opportunity/fields/Reason_for_Lost_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Lost_Opportunity__c</fullName>
    <inlineHelpText>Select the most applicable reason the opportunity was lost, then use the &quot;Explanation for Lost Opportunity&quot; text box below to add any further information.</inlineHelpText>
    <label>Reason for Lost Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Alternates Not Accepted</fullName>
            </value>
            <value>
                <fullName>Competing Vendor Product</fullName>
            </value>
            <value>
                <fullName>Competitor pricing</fullName>
            </value>
            <value>
                <fullName>Contractor switched spec</fullName>
            </value>
            <value>
                <fullName>Contractor did not get the job</fullName>
            </value>
            <value>
                <fullName>I don&apos;t know</fullName>
            </value>
            <value>
                <fullName>Product availability</fullName>
            </value>
            <value>
                <fullName>Purchased from other distributor</fullName>
            </value>
            <value>
                <fullName>Out of Territory Specifier</fullName>
            </value>
            <value>
                <fullName>Tile taken off of job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>