force-app/main/default/objects/Opportunity/fields/Register_Job_Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Register_Job_Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Register Job Send Email</label>
    <type>Checkbox</type>
</CustomField>