force-app/main/default/objects/Opportunity/fields/Selling_Distributor_Account__c.field-meta.xml
<CustomField>
    <fullName>Selling_Distributor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Selling Distributor Account name for out of territory Opportunity sharing.</inlineHelpText>
    <label>Selling Distributor Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Account you are trying to add does not exist or is not a distributor type.</errorMessage>
        <filterItems>
            <field>Account.Account_Type__c</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities - Selling Distributor</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>