force-app/main/default/objects/Opportunity/fields/Selling_Distributor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Selling_Distributor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Point of contact at another Distributor for selling out of territory opportunities</inlineHelpText>
    <label>Selling Distributor Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Selling_Distributor_Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities - Selling Distributor Contact</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>