force-app/main/default/objects/Opportunity/fields/Selling_Distributor_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Selling_Distributor_Contact_Id__c</fullName>
    <formula>Selling_Distributor_Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selling Distributor Contact Id</label>
    <type>Text</type>
</CustomField>