force-app/main/default/objects/Opportunity/fields/Showroom_Selection__c.field-meta.xml
<CustomField>
    <fullName>Showroom_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Showroom Selection</label>
    <type>Checkbox</type>
</CustomField>