force-app/main/default/objects/Opportunity/fields/Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Social_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Social Media</label>
    <type>Checkbox</type>
</CustomField>