force-app/main/default/objects/Opportunity/fields/Special_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Special_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Pricing</label>
    <type>Checkbox</type>
</CustomField>