force-app/main/default/objects/Opportunity/fields/Specifier__c.field-meta.xml
<CustomField>
    <fullName>Specifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Former label was &quot;Specifier&quot;</description>
    <label>Architect Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Professional</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities - Architect</relationshipLabel>
    <relationshipName>OpportunitiesSpecifier</relationshipName>
    <type>Lookup</type>
</CustomField>