force-app/main/default/objects/Opportunity/fields/Specifier_Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Specifier_Account_Address__c</fullName>
    <description>Former label was &quot;Specifier Account Address&quot;</description>
    <formula>Specifier__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Architect Account Address</label>
    <type>Text</type>
</CustomField>