force-app/main/default/objects/Opportunity/fields/Specifier_Account_City__c.field-meta.xml
<CustomField>
    <fullName>Specifier_Account_City__c</fullName>
    <description>Former label was &quot;Architect Account City&quot;</description>
    <formula>Specifier__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Architect Account City</label>
    <type>Text</type>
</CustomField>