force-app/main/default/objects/Opportunity/fields/Specifier_Account_Phone__c.field-meta.xml
<CustomField>
    <fullName>Specifier_Account_Phone__c</fullName>
    <description>Former label was &quot;Specifier Account Phone&quot;</description>
    <formula>Specifier__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Architect Account Phone</label>
    <type>Text</type>
</CustomField>