force-app/main/default/objects/Opportunity/fields/Specifier_Account_State__c.field-meta.xml
<CustomField>
    <fullName>Specifier_Account_State__c</fullName>
    <description>Former label was &quot;Specifier Account State&quot;</description>
    <formula>Specifier__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Architect Account State</label>
    <type>Text</type>
</CustomField>