force-app/main/default/objects/Opportunity/fields/Specifier_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Specifier_Contact_Email__c</fullName>
    <description>Former label was &quot;Architect Contact Email&quot;</description>
    <formula>Specifier_Primary_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Architect Contact Email</label>
    <type>Text</type>
</CustomField>