force-app/main/default/objects/Opportunity/fields/Specifier_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Specifier_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Former label was &quot;Specifier - Primary Contact&quot;</description>
    <label>Architect - Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities - Specifier Primary Contact</relationshipLabel>
    <relationshipName>OpportunitiesSpecifier</relationshipName>
    <type>Lookup</type>
</CustomField>