force-app/main/default/objects/Opportunity/fields/Specifying_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Specifying_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specifying Distributor Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Type__c</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities - Specifying Distributor</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>