force-app/main/default/objects/Opportunity/fields/Submit_Job_Registration__c.field-meta.xml
<CustomField>
    <fullName>Submit_Job_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you need to generate a Job Registration Report to forward to a vendor.</inlineHelpText>
    <label>Submit Job Registration</label>
    <type>Checkbox</type>
</CustomField>