force-app/main/default/objects/Opportunity/fields/Target_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Completion_Date__c</fullName>
    <label>Target Completion Date</label>
    <type>Date</type>
</CustomField>