force-app/main/default/objects/Opportunity/fields/Tile_Needed_By__c.field-meta.xml
<CustomField>
    <fullName>Tile_Needed_By__c</fullName>
    <label>Tile Needed By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2011 Q1</fullName>
            </value>
            <value>
                <fullName>2011 Q2</fullName>
            </value>
            <value>
                <fullName>2011 Q3</fullName>
            </value>
            <value>
                <fullName>2011 Q4</fullName>
            </value>
            <value>
                <fullName>2012 Q1</fullName>
            </value>
            <value>
                <fullName>2012 Q2</fullName>
            </value>
            <value>
                <fullName>2012 Q3</fullName>
            </value>
            <value>
                <fullName>2012 Q4</fullName>
            </value>
            <value>
                <fullName>2013 Q1</fullName>
            </value>
            <value>
                <fullName>2013 Q2</fullName>
            </value>
            <value>
                <fullName>2013 Q3</fullName>
            </value>
            <value>
                <fullName>2013 Q4</fullName>
            </value>
            <value>
                <fullName>2014 Q1</fullName>
            </value>
            <value>
                <fullName>2014 Q2</fullName>
            </value>
            <value>
                <fullName>2014 Q3</fullName>
            </value>
            <value>
                <fullName>2014 Q4</fullName>
            </value>
            <value>
                <fullName>2015 Q1</fullName>
            </value>
            <value>
                <fullName>2015 Q2</fullName>
            </value>
            <value>
                <fullName>2015 Q3</fullName>
            </value>
            <value>
                <fullName>2015 Q4</fullName>
            </value>
            <value>
                <fullName>Later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>