force-app/main/default/objects/Opportunity/fields/Today_90__c.field-meta.xml
<CustomField>
    <fullName>Today_90__c</fullName>
    <formula>Today() - 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today-90</label>
    <type>Date</type>
</CustomField>