force-app/main/default/objects/Opportunity/fields/Traditional_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Traditional_Dealer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Traditional Dealer</label>
    <type>Checkbox</type>
</CustomField>