force-app/main/default/objects/Opportunity/fields/Updated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Updated_Amount__c</fullName>
    <label>Updated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>