force-app/main/default/objects/Opportunity/fields/VIP_Project__c.field-meta.xml
<CustomField>
    <fullName>VIP_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to enable additional monitoring of large project opportunities.</inlineHelpText>
    <label>VIP Project</label>
    <type>Checkbox</type>
</CustomField>