force-app/main/default/objects/Opportunity/recordTypes/Commercial_Opportunities.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Opportunities</fullName>
    <active>true</active>
    <businessProcess>Commercial Sales Process</businessProcess>
    <label>Commercial</label>
</RecordType>