force-app/main/default/objects/Opportunity/recordTypes/Dealer_Builder.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Builder</fullName>
    <active>true</active>
    <businessProcess>Dealer%2FBuilder Sales Process</businessProcess>
    <label>Dealer/Builder</label>
</RecordType>