force-app/main/default/objects/Opportunity/recordTypes/Dealer_Opportunities.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Opportunities</fullName>
    <active>true</active>
    <businessProcess>Dealer Sales Process</businessProcess>
    <label>Dealer/Prospecting</label>
</RecordType>