force-app/main/default/objects/Opportunity/recordTypes/National_Account_Build.recordType-meta.xml
<RecordType>
    <fullName>National_Account_Build</fullName>
    <active>true</active>
    <businessProcess>National  Account Build Sales Process</businessProcess>
    <label>National Account Build</label>
</RecordType>