force-app/main/default/objects/Opportunity/recordTypes/National_Account_Project_Opportunities.recordType-meta.xml
<RecordType>
    <fullName>National_Account_Project_Opportunities</fullName>
    <active>true</active>
    <businessProcess>National Account Sales Process</businessProcess>
    <label>National Account Project</label>
</RecordType>