force-app/main/default/objects/Opportunity/recordTypes/Residential_Opportunities.recordType-meta.xml
<RecordType>
    <fullName>Residential_Opportunities</fullName>
    <active>false</active>
    <businessProcess>Residential Sales Process</businessProcess>
    <description>Use for all Residential Projects</description>
    <label>Residential</label>
</RecordType>