force-app/main/default/objects/Opportunity/recordTypes/Retail_Opportunities.recordType-meta.xml
<RecordType>
    <fullName>Retail_Opportunities</fullName>
    <active>true</active>
    <businessProcess>Retail Sales Process</businessProcess>
    <label>Retail</label>
</RecordType>